fixed bug on navbar, navbar now aligned to center

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -3,7 +3,7 @@
   height: 10vh;
   background: #ffe4c4;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 1rem;
   align-items: center;
   text-align: center;
